src/index.css
/* layout */

#app_root {
  --border-color: #ccc;

  display: grid;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  grid-template-areas: "header" "options" var(--preview, "editor");
  grid-template-rows: auto auto 1fr;

  margin: 0;
  padding: 0;
  overflow: hidden;
  min-height: 100vh;
}
@media (min-width: 494px) {
  #app_root {
    grid-template-areas: "header" "options" "editor" "graph";
    grid-template-rows: auto auto 1fr 1fr;
  }
  .mobile-only {
    display: none;
  }
}
@media (min-width: 800px) and (orientation: landscape) {
  #app_root {
    grid-template-areas: "header header" "editor options" "editor graph";
    grid-template-rows: auto auto minmax(0, 1fr);
    grid-template-columns: 550px auto;
  }
}

header {
  grid-area: header;
  display: flex;
  gap: 10px;
  justify-content: center;
  padding: 20px;

  background-color: #eee;
  border-bottom: 1px solid var(--border-color);
}

.editor {
  grid-area: editor;
  position: relative;
  width: 100%;
  height: 100%;

  border-right: 1px solid var(--border-color);
}

.options {
  grid-area: options;
  display: flex;
  align-items: center;
  background-color: #eee;
  border-bottom: 1px solid var(--border-color);
  padding: 8px;
  gap: 10px;
}

.graph {
  grid-area: graph;
  position: relative;
}

.graph.graph-dark {
  background-color: #222;
  color: #fff;
}

.graph .error {
  position: absolute;
  width: 100%;
  background-color: #922a;
  text-align: center;
  line-height: 1.7em;
}

.graph .element {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 100%;
}

.graph .element img {
  object-fit: contain;
  max-width: 100%;
  max-height: 100%;
}

.graph .element img {
  display: block;
  margin: 0 auto;
}

.export-options {
  position: absolute;
  bottom: 0;
  right: 0.5rem;

  display: flex;
  gap: 1rem;

  font-size: 2rem;
}
.export-options a {
  color: inherit;
  text-decoration: none;
  opacity: 0.2;
}
.export-options a.failed {
  color: #922a;
}
.export-options a:focus,
.export-options a:hover {
  opacity: 1;
}

